# boincsentinels

./: .autotools  .cproject  .project  AUTHORS  ChangeLog  Makefile.am  Makefile.incl  NEWS  README  autogen.sh  bsconfig.h.in  configure.ac
benchmarks/xmlreader/: BOINCNativeParsers.cpp  BOINCNativeParsers.h  BOINCNativeTaskInstance.cpp  BOINCNativeTaskInstance.h  BOINCParsers.cpp  BOINCParsers.h  BOINCSentinelsParserEx.cpp  BOINCSentinelsParserEx.h  BOINCXMLStream.cpp  BOINCXMLStream.h  LookupTables.h  Makefile.am  XMLBenchmarksMain.cpp  get_state.xml
bslclient/src/: ClientState.cpp  ClientState.h  ClientStateApp.cpp  ClientStateApp.h  ClientStateAppVersion.cpp  ClientStateAppVersion.h  ClientStateDatabase.cpp  ClientStateDatabase.h  ClientStateEventDefs.hxx  ClientStateEvents.cpp  ClientStateEvents.h  ClientStateHost.cpp  ClientStateHost.h  ClientStateHostStatus.cpp  ClientStateHostStatus.h  ClientStateMessage.cpp  ClientStateMessage.h  ClientStateNotification.cpp  ClientStateNotification.h  ClientStateObject.cpp  ClientStateObject.h  ClientStateProject.cpp  ClientStateProject.h  ClientStateProjectLink.cpp  ClientStateProjectLink.h  ClientStateProjectListItem.cpp  ClientStateProjectListItem.h  ClientStateProjectStatistic.cpp  ClientStateProjectStatistic.h  ClientStateRPCProfile.cpp  ClientStateRPCProfile.h  ClientStateSyncProfile.cpp  ClientStateSyncProfile.h  ClientStateTask.cpp  ClientStateTask.h  ClientStateTaskInstance.cpp  ClientStateTaskInstance.h  ClientStateTransfer.cpp  ClientStateTransfer.h  ClientStateTypes.h  (+111 more)
bslclient/tests/: ConnectDisconnectTest.cpp  ConnectDisconnectTest.h  EnumerateAppVersionsTest.cpp  EnumerateAppVersionsTest.h  EnumerateAppsTest.cpp  EnumerateAppsTest.h  EnumerateHostsTest.cpp  EnumerateHostsTest.h  EnumerateMessagesTest.cpp  EnumerateMessagesTest.h  EnumerateNotificationsTest.cpp  EnumerateNotificationsTest.h  EnumerateProjectsTest.cpp  EnumerateProjectsTest.h  EnumerateTaskInstancesTest.cpp  EnumerateTaskInstancesTest.h  EnumerateTasksTest.cpp  EnumerateTasksTest.h  EnumerateTransfersTest.cpp  EnumerateTransfersTest.h  GetAppTest.cpp  GetAppTest.h  GetAppVersionTest.cpp  GetAppVersionTest.h  GetHostTest.cpp  GetHostTest.h  GetMessageTest.cpp  GetMessageTest.h  GetNotificationTest.cpp  GetNotificationTest.h  GetProjectStatisticTest.cpp  GetProjectStatisticTest.h  GetProjectTest.cpp  GetProjectTest.h  GetTaskInstanceTest.cpp  GetTaskInstanceTest.h  GetTaskTest.cpp  GetTaskTest.h  GetTransferTest.cpp  GetTransferTest.h  (+3 more)
bslcommon/src/: Makefile.am  bslApp.cpp  bslAppEvents.cpp  bslAppVersion.cpp  bslAppVersionEvents.cpp  bslEventBase.cpp  bslHost.cpp  bslHostCoprocAMD.cpp  bslHostCoprocNvidia.cpp  bslHostCoprocOpenCL.cpp  bslHostEvents.cpp  bslHostStatus.cpp  bslHostStatusEvents.cpp  bslMessage.cpp  bslMessageEvents.cpp  bslNotification.cpp  bslNotificationEvents.cpp  bslProject.cpp  bslProjectEvents.cpp  bslProjectLink.cpp  bslProjectListItem.cpp  bslProjectListItemEvents.cpp  bslProjectStatistic.cpp  bslProjectStatisticEvents.cpp  bslTask.cpp  bslTaskEvents.cpp  bslTaskInstance.cpp  bslTaskInstanceEvents.cpp  bslTransfer.cpp  bslTransferEvents.cpp
bslcommon/tests/: Makefile.am  bslAppEventDataTest.cpp  bslAppEventDataTest.h  bslAppTest.cpp  bslAppTest.h  bslAppVersionEventDataTest.cpp  bslAppVersionEventDataTest.h  bslAppVersionTest.cpp  bslAppVersionTest.h  bslCommonTestMain.cpp  bslHostEventDataTest.cpp  bslHostEventDataTest.h  bslHostTest.cpp  bslHostTest.h  bslMessageEventDataTest.cpp  bslMessageEventDataTest.h  bslMessageTest.cpp  bslMessageTest.h  bslNotificationEventDataTest.cpp  bslNotificationEventDataTest.h  bslNotificationTest.cpp  bslNotificationTest.h  bslProjectEventDataTest.cpp  bslProjectEventDataTest.h  bslProjectLinkTest.cpp  bslProjectLinkTest.h  bslProjectListItemEventDataTest.cpp  bslProjectListItemEventDataTest.h  bslProjectListItemTest.cpp  bslProjectListItemTest.h  bslProjectStatisticEventDataTest.cpp  bslProjectStatisticEventDataTest.h  bslProjectStatisticTest.cpp  bslProjectStatisticTest.h  bslProjectTest.cpp  bslProjectTest.h  bslTaskEventDataTest.cpp  bslTaskEventDataTest.h  bslTaskInstanceEventDataTest.cpp  bslTaskInstanceEventDataTest.h  (+8 more)
bslxml/src/: FNV1Hash.h  LookupTables.cpp  LookupTables.h  Makefile.am  bslStrChr.cpp  bslStrHash.cpp  bslXMLAttributeEx.cpp  bslXMLConverterEx.cpp  bslXMLDictionaryEx.cpp  bslXMLDocumentEx.cpp  bslXMLElementEx.cpp  bslXMLTestUtil.cpp
bslxml/tests/: Makefile.am  bslXMLAttributeExTest.cpp  bslXMLAttributeExTest.h  (+6 more)
hunter/: BOINCListCtrl.cpp  BOINCListCtrl.h  BOINCTaskCtrl.cpp  BOINCTaskCtrl.h  ConfigManager.cpp  ConfigManager.h  DlgConnection.cpp  DlgConnection.h  DlgEventLog.cpp  DlgEventLog.h  Events.h  Hunter.cpp  Hunter.h  Hunter.rc  Interface.cpp  Interface.h  LogManager.cpp  Makefile.am  SkinManager.cpp  SkinManager.h  Utils.cpp  Utils.h  ViewBase.cpp  ViewBase.h  ViewNotifications.cpp  ViewNotifications.h  ViewProjects.cpp  ViewProjects.h  ViewResources.cpp  ViewResources.h  ViewStatistics.cpp  ViewStatistics.h  ViewTasks.cpp  ViewTasks.h  ViewTransfers.cpp  ViewTransfers.h
include/: Makefile.am  bslversion.h  bslversion.h.in  stdwx.cpp  stdwx.h
lancer/: ConfigManager.cpp  Events.h  Interface.cpp  Interface.h  Lancer-Info.plist  Lancer.cpp  Lancer.h  Lancer.rc  LogManager.cpp  Makefile.am  SkinManager.cpp  SkinManager.h
valkyrie/: ClientPage.cpp  ClientPage.h  ConfigManager.cpp  ConfigManager.h  DlgActiveTask.cpp  DlgActiveTask.h  DlgActiveTransfer.cpp  DlgActiveTransfer.h  DlgConnection.cpp  DlgConnection.h  DlgControls.cpp  DlgControls.h  DlgEventLog.cpp  DlgEventLog.h  DlgNotification.cpp  DlgNotification.h  DlgNotifications.cpp  DlgNotifications.h  Events.h  Interface.cpp  Interface.h  LogManager.cpp  LogManager.h  Makefile.am  NotificationManager.cpp  NotificationManager.h  SkinManager.cpp  SkinManager.h  StatusPage.cpp  StatusPage.h  Utils.cpp  Utils.h  Valkyrie-Info.plist  Valkyrie.cpp  Valkyrie.h  Valkyrie.rc  WidgetActiveTask.cpp  WidgetActiveTask.h  WidgetActiveTasks.cpp  WidgetActiveTasks.h  (+20 more)
vulture/: Makefile.am  Vulture.cpp  Vulture.h  Vulture.rc
(+167 files in other folders)
